--- a/index.html
+++ b/index.html
@@ -446,6 +446,40 @@
             </div>
         </section>
 
+        <section id="gallery" class="section bg-dark">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="placeholder1.png" alt="Sagar Raina performing live at a wedding event in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder2.png" alt="Sagar Raina singing at a corporate event with acoustic guitar" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder3.png" alt="Live music performance by Sagar Raina at a private party" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder4.png" alt="Sagar Raina entertaining guests at a wedding celebration in Gurugram" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder5.png" alt="Acoustic live singing performance by Sagar Raina at an intimate venue" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder6.png" alt="Sagar Raina performing soulful music at a corporate function" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder7.png" alt="Sagar Raina with acoustic guitar performing at a live music venue" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder8.png" alt="Wedding singer Sagar Raina creating memorable moments in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="appreciation.png" alt="Client appreciation and testimonial for Sagar Raina's performance" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder1.png" alt="Sagar Raina performing live at a wedding event in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder2.png" alt="Sagar Raina singing at a corporate event with acoustic guitar" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder3.png" alt="Live music performance by Sagar Raina at a private party" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder4.png" alt="Sagar Raina entertaining guests at a wedding celebration in Gurugram" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder5.png" alt="Acoustic live singing performance by Sagar Raina at an intimate venue" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder6.png" alt="Sagar Raina performing soulful music at a corporate function" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder7.png" alt="Sagar Raina with acoustic guitar performing at a live music venue" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder8.png" alt="Wedding singer Sagar Raina creating memorable moments in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="appreciation.png" alt="Client appreciation and testimonial for Sagar Raina's performance" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder1.png" alt="Sagar Raina performing live at a wedding event in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder2.png" alt="Sagar Raina singing at a corporate event with acoustic guitar" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder3.png" alt="Live music performance by Sagar Raina at a private party" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder4.png" alt="Sagar Raina entertaining guests at a wedding celebration in Gurugram" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder5.png" alt="Acoustic live singing performance by Sagar Raina at an intimate venue" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder6.png" alt="Sagar Raina performing soulful music at a corporate function" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder7.png" alt="Sagar Raina with acoustic guitar performing at a live music venue" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="placeholder8.png" alt="Wedding singer Sagar Raina creating memorable moments in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="swiper-slide"><img src="appreciation.png" alt="Client appreciation and testimonial for Sagar Raina's performance" width="200" height="300" loading="lazy" decoding="async"></div>
+                </div>
+            </div>
+        </section>
+
         <section id="portfolio" class="section bg-dark">
             <div id="portfolio-particles" class="particles-bg"></div>
             <div class="container">
