--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                             <span class="faq-icon">+</span>
                         </button>
                         <div class="faq-answer" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-                            <p itemprop="text">I primarily serve Delhi NCR including Delhi, Gurugram, Noida, 44and Faridabad. I'm also available for destination events in other cities like Jaipur, Chandigarh, and anywhere across India. Feel free to reach out for outstation bookings!</p>
+                            <p itemprop="text">I primarily serve Delhi NCR including Delhi, Gurugram, Noida, and Faridabad. I'm also available for destination events in other cities like Jaipur, Chandigarh, and anywhere across India. Feel free to reach out for outstation bookings!</p>
                         </div>
                     </div>
 
@@ -796,4 +796,5 @@
     </script>
 </body>
 </html>
+
 
